--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -8,7 +8,7 @@
       "type": "java",
       "name": "EasyCook",
       "request": "launch",
-      "mainClass": "EasyCook",
+      "mainClass": "application.EasyCook",
       "projectName": "EasyCook_251aaf90",
       "vmArgs": "--module-path \"D:/Tech/javafx-sdk-17.0.13/lib\" --add-modules javafx.controls,javafx.fxml"
     },
